# girens

./: .gitignore  .gitlab-ci.yml  README.MD  meson.build  meson_options.txt  nl.g4d.Girens.json  org.gnome.Girens.json  org.gnome.Plex.json
data/: meson.build  nl.g4d.Girens.appdata.xml.in  nl.g4d.Girens.desktop.in  nl.g4d.Girens.gresource.xml  nl.g4d.Girens.gschema.xml  org.gnome.Girens.appdata.xml.in  org.gnome.Girens.desktop.in  org.gnome.Girens.gschema.xml  org.gnome.Plex.appdata.xml.in  org.gnome.Plex.desktop.in  org.gnome.Plex.gschema.xml
data/icons/: meson.build
data/ui/: about_dialog.ui.in  album_item.blp  album_item.ui  album_view.blp  album_view.ui  artist_view.blp  artist_view.ui  cover_box.blp  cover_box.ui  discover_view.blp  discover_view.ui  download_menu.blp  download_menu.ui  download_row.blp  download_row.ui  list.blp  list_playqueue.blp  loading_view.blp  loading_view.ui  login_view.blp  login_view.ui  main_window.blp  main_window.ui  media_box_music.blp  media_box_music.ui  media_box_video_bottom.blp  media_box_video_bottom.ui  media_box_video_top.blp  media_box_video_top.ui  meson.build  music_popover_menu.blp  music_popover_menu.ui  player_view.blp  player_view.ui  playqueue_item.blp  playqueue_item.ui  playqueue_popover.blp  playqueue_popover.ui  plex.css  profile_dialog.blp  (+24 more)
po/: LINGUAS  POTFILES  POTFILES.in  de.po  en_GB.po  es.po  fi.po  fr.po  girens.pot  it.po  meson.build  nb.po  nb_NO.po  nl.mo  nl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  update_potfiles.sh
search-provider/: girens-sp.in  meson.build  nl.g4d.Girens.SearchProvider.ini  nl.g4d.Girens.SearchProvider.service.in
src/: #cover_box.ui#  about_dialog.ui  album_item.py  album_item.ui  album_view.py  album_view.ui  artist_view.py  artist_view.ui  client_server.py  constants.py.in  cover_box.py  cover_box.ui  discover_view.py  discover_view.ui  download_menu.py  download_menu.ui  download_row.py  download_row.ui  girens.gresource.xml  girens.in  item_bin.py  list.py  list_playqueue.py  loading_view.py  loading_view.ui  login_view.py  login_view.ui  main.py  main_window.ui  media_box.py  media_box.ui  media_box_music.py  media_box_music.ui  media_box_video_bottom.py  media_box_video_bottom.ui  media_box_video_top.py  media_box_video_top.ui  media_keys.py  meson.build  mpris.py  (+37 more)
