datadir = join_paths('share', 'icons')
icondir = join_paths('hicolor', 'scalable', 'apps')
install_data (
    join_paths(icondir, 'org.gnome.Girens.svg'),
    install_dir: join_paths(datadir, icondir)
)

icondir = join_paths('hicolor', 'symbolic', 'apps')
install_data (
    join_paths(icondir, 'org.gnome.Girens-symbolic.svg'),
    install_dir: join_paths(datadir, icondir)
)
