datadir = join_paths('share', 'icons')
icondir = join_paths('hicolor', 'scalable', 'apps')
install_data (
    join_paths(icondir, 'nl.g4d.Girens.svg'),
    install_dir: join_paths(datadir, icondir)
)

icondir = join_paths('hicolor', 'symbolic', 'apps')
install_data (
    join_paths(icondir, 'nl.g4d.Girens-symbolic.svg'),
    install_dir: join_paths(datadir, icondir)
)
