blueprints = custom_target('blueprints',
  input: files(
    'album_item.blp',
    'album_view.blp',
    'artist_view.blp',
    'cover_box.blp',
    'discover_view.blp',
    'download_menu.blp',
    'download_row.blp',
    'list.blp',
    'list_playqueue.blp',
    'loading_view.blp',
    'login_view.blp',
    'main_window.blp',
    'media_box_music.blp',
    'media_box_video_bottom.blp',
    'media_box_video_top.blp',
    'music_popover_menu.blp',
    'player_view.blp',
    'playqueue_item.blp',
    'playqueue_popover.blp',
    'profile_dialog.blp',
    'search_view.blp',
    'section_grid.blp',
    'section_view.blp',
    'shortcuts.blp',
    'show_view.blp',
    'show_view_item.blp',
    'sidebar_box.blp',
    'sync_dialog.blp',
    'sync_item.blp',
    'sync_settings.blp',
    'theme_switcher.blp',
  ),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)

aboutdialog = configure_file(
    input: 'about_dialog.ui.in',
    output: 'about_dialog.ui',
    configuration: conf_service
  )

gnome.compile_resources('girens',
  '../nl.g4d.Girens.gresource.xml',
  gresource_bundle: true,
  install: true,
  install_dir: pkgdatadir,
  dependencies: [blueprints, aboutdialog]
)
